--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "dev-app-dmetal-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "",
