--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "dev-app-dmetal-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "server.js",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "prisma generate"
   },
   "keywords": [],
