--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "prisma generate"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
