--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.4.0",
     "eslint": "^9.4.0",
     "globals": "^15.3.0",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "prettier-plugin-prisma": "^5.0.0"
   }
 }
