--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+#npx prisma generate --schema=./prisma/mysql-schema.prisma
+#npx prisma generate --schema=./prisma/mssql-schema.prisma
+
+
 PORT=
 DATABASE_MSSQL_URL=
 DATABASE_MYSQL_URL=
+
+
